# emufxtool

./: Makefile  Makefile.am  Makefile.in  README.ps  README.txt  __strdup.h  aclocal.m4  alsa-utils_0.9.4-1.dsc  asmdefs.h  chunkfile.C  chunkfile.h  config.h  config.status  configure  configure.in  constants.as10k1  default.as10k1  default0001.as10k1  default0001.emufx  default0001.sym  dsp.C  dsp.h  dsp_defs.h  emufxtool.C  emutree.h  excep.h  fx8010asm.h  fx8010ioctl.h  fxbus.as10k1  inout.as10k1  instruction.C  instruction.h  parser.C  parser.h  patch.C  patch.h  reverse.emu10k1  reverse.sym  scanner.C  scanner.h  (+6 more)
.deps/: chunkfile.P  dsp.P  emufxtool.P  instruction.P  parser.P  patch.P  scanner.P  strdsp.P
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
doc/: README.dvi  README.tex
